--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Home Page</h1>
-    <p>THis is the home page!</p>
+    <p>Contents of the home Page!</p>
     <ul>
       <li>First Item</li>
       <li>Second Item</li>
